--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>RESPONSIVE PERSONAL PORTFOLIO WEBSITE </title>
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-        <link rel="stylesheet" type="text/css" href="/Users/rishadhanilam/Desktop/Portfolio/style.css">
+        <link rel="stylesheet" type="text/css" href="./style.css">
     </head>
     <body>
         <!--body-->
