--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                 <a href="/Users/rishadhanilam/Downloads/RishadhaNilamResume 2.pdf" class="btn">Download CV</a>
             </div>
             <div class="home-img">
-                <img src="/Users/rishadhanilam/Desktop/portfolio/assest/home.jpg.avif" alt="">
+                <img src="./assest/home.jpg.avif" alt="">
             </div>
         </section>
         <section class="about" id="about">
             <div class="about-img">
-                <img src="assest/aboutme.jpg" alt="">
+                <img src="./assest/aboutme.jpg" alt="">
             </div>
             <div class="about-content">
                 <h2 class="heading">About<span>Me</span></h2>
