--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <h2 class="heading">Latest<span>Project</span></h2>
             <div class="portfolio-container">
                 <div class="portfolio-box">
-                    <img src="/Users/rishadhanilam/Desktop/portfolio/assest/portfolio.jpg"alt="">
+                    <img src="./assest/portfolio.jpg"alt="">
                     <div class="portfolio-layer">
                         <h4>Personal Portfolio</h4>
                         <p>In this project I try making my own portfolio website for myself. Showcase my projects, my social media handles, my experience on the website.</p>
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <div class="portfolio-box">
-                    <img src="/Users/rishadhanilam/Desktop/portfolio/assest/luxury.jpg"alt="">
+                    <img src="./assest/luxury.jpg"alt="">
                     <div class="portfolio-layer">
                         <h4>Hotel Management System</h4>
                         <p>
@@ -113,7 +113,7 @@
                     </div>
                 </div>
                 <div class="portfolio-box">
-                    <img src="/Users/rishadhanilam/Desktop/portfolio/assest/beauty.jpg"alt="">
+                    <img src="./assest/beauty.jpg"alt="">
                     <div class="portfolio-layer">
                         <h4>Beauty and Fitness</h4>
                         <p>In this project, we developed a website for users to get information about beauty and fitnees tips by using html,css and PHP. </p>
