--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a href="malito:rish2002rn@gmail.com"><i class='bx bxs-envelope'></i></a>
                     <a href="https://www.linkedin.com/in/rishadha-nilam-027928261/"><i class='bx bxl-linkedin-square' ></i></a>
                 </div>
-                <a href="/Users/rishadhanilam/Downloads/RishadhaNilamResume 2.pdf" class="btn">Download CV</a>
+                <a href="./assest/RishadhaNilamResume 2.pdf" class="btn">Download CV</a>
             </div>
             <div class="home-img">
                 <img src="./assest/home.jpg.avif" alt="">
